--- a/portfolio.html
+++ b/portfolio.html
@@ -97,13 +97,27 @@
           <!-- <section>1 -->
 
           <ul class="list-apply list">
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                />
+            <li class="link link-eff  ">
+              <a class="link card-eff team-list-wrapp" href="">
+
+
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+
+                  <p class="overley" >
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Doloremque, molestias beatae fuga dicta voluptatem,
+                    necessitatibus saepe quae molestiae nesciunt quia aperiam
+                    culpa nemo. Quibusdam nesciunt voluptatibus harum, minima
+                    dicta voluptatem unde asperiores eum nam nihil incidunt quas
+                    nemo! Deserunt voluptas saepe natus fugit, molestiae nobis
+                    eaque molestias nihil quas dicta.
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Banking App Interface Concept</h2>
@@ -290,5 +304,9 @@
         </div>
       </div>
     </footer>
+
+    <h1>The animation starts when hovering over an element</h1>
+    <div class="box"></div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
