--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
               >
             </li>
             <li class="header-item">
-              <a class="menu-list link menu-list-effect" href="./portfolio.html"
+              <a class="menu-list link menu-list-effect portfolio" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -304,9 +304,6 @@
         </div>
       </div>
     </footer>
-
-    <h1>The animation starts when hovering over an element</h1>
-    <div class="box"></div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
