--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <header class="header-main">
       <div class="container-head container border">
         <nav class="menu-list-main list">
-          <a class="nav-logo link" href="./index.html"
+          <a class="nav-logo link " href="./index.html"
             >Web<span class="logo-black">Studio</span></a
           >
 
           <ul class="header-menu mail-link link list">
             <li class="header-item">
-              <a class="menu-list link menu-list-effect" href="./index.html"
+              <a class="menu-list link menu-list-effect studio" href="./index.html"
                 >Studio</a
               >
             </li>
@@ -79,7 +79,11 @@
             Effective Solutions for Your Business
           </h1>
 
-          <button class="section-hero-btn btn-style" type="button">
+          <button
+            class="section-hero-btn btn-style"
+            type="button"
+            data-modal-open
+          >
             Order Service
           </button>
         </div>
@@ -464,6 +468,15 @@
       </div>
     </footer>
 
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-btn-icon" width="8" , height="8">
+            <use href="./images/icons.svg#icon-cross"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
