--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,9 @@
               >
             </li>
             <li class="header-item">
-              <a class="menu-list link menu-list-effect portfolio" href="./portfolio.html"
+              <a
+                class="menu-list link menu-list-effect portfolio"
+                href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -97,10 +99,8 @@
           <!-- <section>1 -->
 
           <ul class="list-apply list">
-            <li class="link link-eff  ">
+            <li class="link link-eff">
               <a class="link card-eff team-list-wrapp" href="">
-
-
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-1.jpg"
@@ -108,14 +108,10 @@
                     width="360"
                   />
 
-                  <p class="overley" >
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Doloremque, molestias beatae fuga dicta voluptatem,
-                    necessitatibus saepe quae molestiae nesciunt quia aperiam
-                    culpa nemo. Quibusdam nesciunt voluptatibus harum, minima
-                    dicta voluptatem unde asperiores eum nam nihil incidunt quas
-                    nemo! Deserunt voluptas saepe natus fugit, molestiae nobis
-                    eaque molestias nihil quas dicta.
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
                   </p>
                 </div>
 
@@ -127,13 +123,20 @@
               </a>
             </li>
 
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+            <li class="link link-eff">
+              <a class="link card-eff team-list-wrapp" href="">
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Cashless Payment</h2>
@@ -142,13 +145,20 @@
               </a>
             </li>
 
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-3.jpg"
-                  alt="Meditaion App"
-                  width="360"
-                />
+            <li class="link link-eff">
+              <a class="link card-eff team-list-wrapp" href="">
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-3.jpg"
+                    alt="Meditaion App"
+                    width="360"
+                  />
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Meditation App</h2>
@@ -157,13 +167,20 @@
               </a>
             </li>
 
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+            <li class="link link-eff">
+              <a class="link card-eff team-list-wrapp" href="">
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Taxi Service</h2>
@@ -172,13 +189,20 @@
               </a>
             </li>
 
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+            <li class="link link-eff">
+              <a class="link card-eff team-list-wrapp" href="">
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Screen Illustrations</h2>
@@ -187,13 +211,20 @@
               </a>
             </li>
 
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+            <li class="link link-eff">
+              <a class="link card-eff team-list-wrapp" href="">
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Online Courses</h2>
@@ -202,13 +233,20 @@
               </a>
             </li>
 
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+            <li class="link link-eff">
+              <a class="link card-eff team-list-wrapp" href="">
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Instagram Stories Concept</h2>
@@ -217,13 +255,20 @@
               </a>
             </li>
 
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                />
+            <li class="link link-eff">
+              <a class="link card-eff team-list-wrapp" href="">
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Organic Food</h2>
@@ -232,13 +277,20 @@
               </a>
             </li>
 
-            <li class="link">
-              <a class="link card-eff" href="">
-                <img
-                  src="./images-portfolio/img-9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                />
+            <li class="link link-eff">
+              <a class="link card-eff team-list-wrapp" href="">
+                <div class="image-wrap">
+                  <img
+                    src="./images-portfolio/img-9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                  <p class="overley">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
 
                 <div class="border-card">
                   <h2 class="section-title">Fresh Coffee</h2>
