--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
                   <p class="overley">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
+                    App · Cloud Storage 
                   </p>
                 </div>
 
