--- a/portfolio.html
+++ b/portfolio.html
@@ -80,19 +80,19 @@
 
           <ul class="list-btn list-item list">
             <li>
-              <button class="btn-font" type="button">All</button>
+              <button class="btn-fon" type="button">All</button>
             </li>
             <li>
-              <button class="btn-font" type="button">Web Site</button>
+              <button class="btn-fon" type="button">Web Site</button>
             </li>
             <li>
-              <button class="btn-font" type="button">App</button>
+              <button class="btn-fon" type="button">App</button>
             </li>
             <li>
-              <button class="btn-font" type="button">Design</button>
+              <button class="btn-fon" type="button">Design</button>
             </li>
             <li>
-              <button class="btn-font" type="button">Marketing</button>
+              <button class="btn-fon" type="button">Marketing</button>
             </li>
           </ul>
 
