--- a/portfolio.html
+++ b/portfolio.html
@@ -80,19 +80,19 @@
 
           <ul class="list-btn list-item list">
             <li>
-              <button class="btn-fon" type="button">All</button>
+              <button class="btn-fon btn-font" type="button">All</button>
             </li>
             <li>
-              <button class="btn-fon" type="button">Web Site</button>
+              <button class="btn-fon btn-font" type="button">Web Site</button>
             </li>
             <li>
-              <button class="btn-fon" type="button">App</button>
+              <button class="btn-fon btn-font" type="button">App</button>
             </li>
             <li>
-              <button class="btn-fon" type="button">Design</button>
+              <button class="btn-fon btn-font" type="button">Design</button>
             </li>
             <li>
-              <button class="btn-fon" type="button">Marketing</button>
+              <button class="btn-fon btn-font" type="button">Marketing</button>
             </li>
           </ul>
 
@@ -100,7 +100,7 @@
 
           <ul class="list-apply list">
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-1.jpg"
@@ -124,7 +124,7 @@
             </li>
 
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-2.jpg"
@@ -146,7 +146,7 @@
             </li>
 
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-3.jpg"
@@ -168,7 +168,7 @@
             </li>
 
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-4.jpg"
@@ -190,7 +190,7 @@
             </li>
 
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-5.jpg"
@@ -212,7 +212,7 @@
             </li>
 
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-6.jpg"
@@ -234,7 +234,7 @@
             </li>
 
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-7.jpg"
@@ -256,7 +256,7 @@
             </li>
 
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-8.jpg"
@@ -278,7 +278,7 @@
             </li>
 
             <li class="link link-eff">
-              <a class="link card-eff team-list-wrapp" href="">
+              <a class="link card-eff team-list-wrapp link-eff" href="">
                 <div class="image-wrap">
                   <img
                     src="./images-portfolio/img-9.jpg"
