--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
     <header class="header-main">
       <div class="container-head container border">
         <nav class="menu-list-main list">
-          <a class="nav-logo link " href="./index.html"
+          <a class="nav-logo link" href="./index.html"
             >Web<span class="logo-black">Studio</span></a
           >
 
           <ul class="header-menu mail-link link list">
             <li class="header-item">
-              <a class="menu-list link menu-list-effect studio" href="./index.html"
+              <a
+                class="menu-list link menu-list-effect studio"
+                href="./index.html"
                 >Studio</a
               >
             </li>
