--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             <li class="custum-list-item">
               <a href="" class="info-link cust-bord">
                 <svg class="cust-list-icon" width="41" , height="47">
-                  <use href="./images/symbol-defs.svg#icon-group1"></use>
+                  <use class="cust-list-icon"  href="./images/symbol-defs.svg#icon-group1"></use>
                 </svg>
               </a>
             </li>
